
History
=======

0.2.1
-----
 
  * Updated script to work with Ubuntu Precise
    (see https://github.com/rraptorr/sun-java6/issues/5#issuecomment-4312028)

0.2.0
-----
 
  * Builds Java 7 packages as well
  * Huge code refactor to make it much easier to maintain

0.1.8
-----
 
  * Added dynamic determination of Java package URLs and sizes
  * Added an option (-c) to optionally clean .deb package
     - Closes : https://github.com/flexiondotorg/oab-java6/issues/10

0.1.7
-----

  * Fixed GPG key creation on VMware ESX Server
     - Closes : https://github.com/flexiondotorg/oab-java6/issues/11
  * Fixed clone of the 'sun-java6' repository for users behind restrictive 
    firewalls, thanks to Thorsten Möllers

0.1.6
-----
 
  * Fixed downloading of common.sh when ca-certificates is not installed
     - Closes : https://github.com/flexiondotorg/oab-java6/issues/3
  * Updated to support Java6u31
     - Closes : https://github.com/flexiondotorg/oab-java6/issues/7
     - Closes : https://github.com/flexiondotorg/oab-java6/issues/8
     - NOTE! Requires that the upstream script tags Java6u31 as stable, see the 
       following ticket https://github.com/rraptorr/sun-java6/issues/3     
  * Prevent script from running under Ubuntu Precise as it is currently 
    known to be unsupported.
     - Closes : https://github.com/flexiondotorg/oab-java6/issues/4
  * Prevent automated key generation when running in an OpenVZ 
    container because I'm too stupid to work out a proper solution

0.1.5
-----

  * Fixed missing code that actually does the build

0.1.4
-----

  * Added GnuPG signing of the local 'apt' repository
  * Updated package building to preserve the upstream package urgency
  * Refactored to remove hard coded versions, now uses 'debian/changelog'
  * Fixed the 'override' file generation to ensure it doesn't contain duplicates
  * Updated documentation

0.1.3
-----

  * Added checking out of tagged releases of the upstream scripts