@@ -2,9 +2,9 @@
 License
 =======
 
-Copyright (c) 2012 Martin Wimpress, http://flexion.org/
-
 Copyright (c) 2012 Tamer Saadeh <tamersaadeh@gmail.com>
+
+Original Copyright (c) 2012 Martin Wimpress, http://flexion.org/
 
 Permission is hereby granted, free of charge, to any person obtaining a copy of
 this software and associated documentation files (the "Software"), to deal in
