@@ -1,99 +1,101 @@
-This is a fork of https://github.com/flexiondotorg/oab-java6
-that creates an 'apt' repository for both Sun Java 6 and Oracle Java 7.
+Origins
+===
+This is a fork of [flexiondotorg/oab-java6](https://github.com/flexiondotorg/oab-java6) that creates an `apt` repository for both Sun Java 6 and Oracle Java 7.
 
-oab-java.sh v0.2.0 - Create a local 'apt' repository for Ubuntu Java packages.
-Copyright (c) 2012 Flexion.Org, http://flexion.org. MIT License
+`oab-java.sh` v0.2.1 - Create a local `apt` repository for Ubuntu Java packages.
 
 Copyright (c) 2012 Tamer Saadeh <tamersaadeh@gmail.com>. MIT License
 
-By running this script to download Java you acknowledge that you have
-read and accepted the terms of the Oracle end user license agreement.
+Original Copyright (c) 2012 Flexion.Org, http://flexion.org. MIT License
 
-  - http://www.oracle.com/technetwork/java/javase/terms/license/
+By running this script to download Java you acknowledge that you have read and accepted the terms of the Oracle end user license agreement.
 
-If you want to see what this is script is doing while it is running then execute
-the following from another shell:
+[Java Terms and License](http://www.oracle.com/technetwork/java/javase/terms/license/)
 
-  tail -f ./build.log
+If you want to see what this is script is doing while it is running then execute the following from another shell:
+
+```tail -f build.log```
 
 Usage
+===
 
-  sudo ./oab-java.sh
+```sudo ./oab-java.sh```
 
 Optional parameters
-  -c | --clean : Remove pre-existing packages from '/var/local/oab/deb'
-  -h | --help : This help message
+---
+  * `-c | --clean` : Remove pre-existing packages from `/var/local/oab/deb`
+  * `-h | --help` : This help message
 
 How do I download and run this thing?
-=====================================
+===
 Like this.
 
-  cd ~/
-  git clone https://github.com/tamersaadeh/oab-java.git
-  cd oab-java/
-  sudo ./oab-java.sh
+```cd ~/```
+```git clone https://github.com/tamersaadeh/oab-java.git```
+```cd oab-java/```
+```sudo ./oab-java.sh```
 
 How it works
-============
+===
 This script is merely a wrapper for the most excllent Debian packaging
 scripts prepared by Janusz Dziemidowicz.
 
-  - https://github.com/rraptorr/sun-java6
-  - https://github.com/rraptorr/oracle-java7
+[rraptorr/sun-java6](https://github.com/rraptorr/sun-java6)
+[rraptorr/oracle-java7](https://github.com/rraptorr/oracle-java7)
 
 This script is Based on the scirpt prepared by Martin Wimpress.
 
-  - https://github.com/flexiondotorg/oab-java6
+[flexiondotorg/oab-java6](https://github.com/flexiondotorg/oab-java6)
 
 The basic execution steps are:
+===
 
-  - Remove, my now disabled, Java PPA 'ppa:flexiondotorg/java'.
-  - Install the tools required to build the Java packages.
-  - Create download cache in '/var/local/oab/pkg'.
-  - Download the i586 and x64 Java install binaries from Oracle. Yes, both are required.
-  - Clone the build scripts from https://github.com/rraptorr/sun-java6 and https://github.com/rraptorr/oracle-java7
-  - Build the Java packages applicable to your system.
-  - Create local 'apt' repository in '/var/local/oab/deb' for the newly built Java Packages.
-  - Create a GnuPG signing key in '/var/local/oab/gpg' if none exists.
-  - Sign the local 'apt' repository using the local GnuPG signing key.
+  * Remove, my now disabled, Java PPA 'ppa:flexiondotorg/java'.
+  * Install the tools required to build the Java packages.
+  * Create download cache in `/var/local/oab/pkg`.
+  * Download the i586 and x64 Java install binaries from Oracle. Yes, **both are required**.
+  * Clone the build scripts from [rraptorr/sun-java6](https://github.com/rraptorr/sun-java6) and [rraptorr/oracle-java7](https://github.com/rraptorr/oracle-java7).
+  * Build the Java packages applicable to your system.
+  * Create local `apt` repository in `/var/local/oab/deb` for the newly built Java Packages.
+  * Create a GnuPG signing key in `/var/local/oab/gpg`, if none exists.
+  * Sign the local `apt` repository using the local GnuPG signing key.
 
 What gets installed?
-====================
-Nothing!
+===
+**Nothing!**
 
-This script will no longer try and directly install or upgrade any Java
-packages, instead a local 'apt' repository is created that hosts locally
-built Java packages applicable to your system. It is up to you to install
-or upgrade the Java packages you require using 'apt-get', 'aptitude' or
-'synaptic', etc. For example, once this script has been run you can simply
-install the JRE by executing the following from a shell.
+This script will no longer try and directly install or upgrade any Java packages, instead a local 'apt' repository is created that hosts locally built Java packages applicable to your system. It is up to you to installor upgrade the Java packages you require using `apt-get`, `aptitude` , or `synaptic`, etc. For example, once this script has been run you can simply install the JRE by executing the following from a shell.
 
-  sudo apt-get install sun-java6-jre
-  or:
-  sudo apt-get install oracle-java7-jre
+```sudo apt-get install sun-java6-jre```
+or:
+```sudo apt-get install oracle-java7-jre```
 
-Or if you already have the "official" Ubuntu packages installed then you
-can upgrade by executing the folowing from a shell.
+Or if you already have the "official" Ubuntu packages installed then you can upgrade by executing the folowing from a shell.
 
-  sudo apt-get upgrade
+```sudo apt-get upgrade```
 
-The local 'apt' repository is just that, **local**. It is not accessible
-remotely and oab-java.sh will never enable that capability to ensure
-compliance with Oracle's asinine license requirements.
+The local `apt` repository is just that, **local**. It is not accessible remotely and `oab-java.sh` will never enable that capability to ensure compliance with Oracle's asinine license requirements.
 
 Known Issues
-============
+===
 
-  - The Oracle download servers can be horribly slow. My script caches the
-    downloads so you only need download each file once.
+  * The Oracle download servers can be horribly slow. My script caches the downloads so you only need download each file once.
 
-What is 'oab'?
-==============
-Because, O.A.B! ;-)
-
+What is `oab`?
+===
+*Because, O.A.B! ;-)*
 
 History
 =======
+
+0.2.1
+-----
+ 
+  * Updated script to work with Ubuntu Precise
+    (see https://github.com/rraptorr/sun-java6/issues/5#issuecomment-4312028)
+  * Refactored documentation and added support for GitHub Markdown
+  * Fixed an issue that caused the Release file to be malformed
+    (thanks to Jeff Cooper <repoocaj@gmail.com> commit: 30711df3b7efc16bd8927988d071c83bbdb174cd)
 
 0.2.0
 -----
@@ -125,7 +127,7 @@ History
      - Closes : https://github.com/flexiondotorg/oab-java6/issues/7
      - Closes : https://github.com/flexiondotorg/oab-java6/issues/8
      - NOTE! Requires that the upstream script tags Java6u31 as stable, see the 
-       following ticket https://github.com/rraptorr/sun-java6/issues/3     
+       following ticket https://github.com/rraptorr/sun-java6/issues/3
   * Prevent script from running under Ubuntu Precise as it is currently 
     known to be unsupported.
      - Closes : https://github.com/flexiondotorg/oab-java6/issues/4
@@ -187,14 +189,14 @@ Todo
   pre-existing signing key.
 * Add support to build for a given Ubuntu distribution.
 * Add support to optionally build using 'pbuilder'.
-* New Issue: Does not exit after an error occurs.
+* Fully exit after an error occurs.
 
 License
 =======
 
-Copyright (c) 2012 Martin Wimpress, http://flexion.org/
-
 Copyright (c) 2012 Tamer Saadeh <tamersaadeh@gmail.com>
+
+Original Copyright (c) 2012 Martin Wimpress, http://flexion.org/
 
 Permission is hereby granted, free of charge, to any person obtaining a copy of
 this software and associated documentation files (the "Software"), to deal in
